# parkinson_project

./: README.md  data_augmentation.md  data_exploration_and_processing.ipynb  deep_learning_parkinson.md  main.py  pairs_experiment_0109.txt  pyproject.toml
.ipynb_checkpoints/: data_exploration_and_processing-checkpoint.ipynb
1_D_Conv/: 1D_conv_complet_data.ipynb  train_test_data_check.ipynb
1_D_Conv/.ipynb_checkpoints/: 1D_conv_complet_data-checkpoint.ipynb
CNN/: customdata_loader.py  models.py  train.py  train_encoder.py
LSTMS/: Vanilla_LSTM.ipynb  dataloaders_and_losses.ipynb  lsmt_for_prediction.ipynb  single_feature_tests-Frequency.ipynb  single_feature_tests.ipynb
LSTMS/.ipynb_checkpoints/: Vanilla_LSTM-checkpoint.ipynb  lsmt_for_prediction-checkpoint.ipynb  single_feature_tests-checkpoint.ipynb
classification/: paper_replication.ipynb  paper_replication_data_calm.ipynb  paper_replication_data_calm_envelopped.ipynb  xgboost_CNN.ipynb  xgboost_classification.ipynb
classification/.ipynb_checkpoints/: CNN_exploration-checkpoint.ipynb  paper_replication-checkpoint.ipynb  paper_replication_data_calm-checkpoint.ipynb  paper_replication_data_calm_envelopped-checkpoint.ipynb  xgboost_CNN-checkpoint.ipynb  xgboost_classification-checkpoint.ipynb
scripts/scripts/: config.yaml  feature_selection.py  main.py  viz.py  (+3 more)
signal_features/: all_possible_features.ipynb  classification_all_features.ipynb  data_relaxed_for_lstm.ipynb  data_relaxed_for_lstm_complet.ipynb  patent_features.ipynb
utils/: augment_data.py  convert_to_csv.py  data_loader.py  preprocessing.py
(+8 files in other folders)
